DL-17035 Address mockito warnings