@@ -37,7 +37,7 @@ lazy val microservice = Project(appName, file("."))
     Test / parallelExecution := false,
     Test / javaOptions ++= Seq(
       "-Dconfig.resource=test.application.conf",
-      s"-javaagent:${csrCacheDirectory.value.getAbsolutePath}/https/repo1.maven.org/maven2/org/mockito/mockito-core/${AppDependencies.mockitoVersion}/mockito-core-${AppDependencies.mockitoVersion}.jar"
+      "-XX:+EnableDynamicAgentLoading"
     ),
   )
 
